# ProRadaar-main

./: .gitignore  RELEASE_NOTES.md  pyproject.toml  sources.yaml
.github/workflows/: daily-digest.yml
docs/superpowers/plans/: 2026-06-09-product-digest-mvp-implementation-plan.md  2026-06-11-telegram-rich-formatting-implementation-plan.md
docs/superpowers/specs/: 2026-06-08-product-digest-mvp-design.md  2026-06-11-telegram-rich-formatting-design.md
src/proradaar/: __init__.py  config.py  digest.py  fetcher.py  models.py  ranker.py  summarizer.py  telegram.py
tests/: test_config.py  test_digest.py  test_fetcher.py  test_ranker.py  test_summarizer.py  test_telegram.py
