[project]
name = "proradaar"
version = "0.1.0"
description = "Daily PM and SaaS digest focused on onboarding, activation, and monetisation."
requires-python = ">=3.12"
dependencies = [
  "feedparser>=6.0.11",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "python-dateutil>=2.9.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
proradaar-digest = "proradaar.digest:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
